--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+
   background-color: #99BCA6;
   }
 
@@ -19,11 +20,14 @@
   font-size: 15px;
   text-align: center;
   padding: 10px
-  backgr
 }
 
 .row {
   flex-direction: row;
+}
+
+.row-reverse {
+  flex-direction: row-reverse;
 }
 
 .itemImg img{
@@ -51,13 +55,14 @@ div a:hover {
   justify-content: center;
 }
 
-.boton{
+.boton, .item{
   background-color: #35623C;
   margin: 15px;
   width: 150px;
-  height: 30px;
-  padding-bottom: 20px;
-  padding-top: 5px;
+  height: 10px;
+  padding-bottom: 30px;
+
+
 }
 
 p{
